--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "lucide-react": "^0.454.0",
     "mongodb": "latest",
     "mongodb-client-encryption": "latest",
-    "next": "14.2.16",
+    "next": "^14.2.31",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-day-picker": "8.10.1",
